# anchor-litesvm

./: .gitignore  CHANGELOG.md  Cargo.toml.backup  LINE_COUNT_COMPARISON.md  README.md  SYNTAX_COMPARISON.md
anchor-escrow-example/: README.md
anchor-escrow-example/anchor-litesvm-old/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
anchor-escrow-example/anchor-litesvm-old/examples/: basic_usage.rs
anchor-escrow-example/anchor-litesvm-old/src/: builder.rs  context.rs  instruction_builder.rs  lib.rs  transaction.rs
anchor-escrow-example/programs/anchor_escrow/: Cargo.toml
anchor-escrow-example/programs/anchor_escrow/src/: lib.rs
anchor-escrow-example/programs/anchor_escrow/src/instructions/: mod.rs
anchor-escrow-example/tests/: Cargo.toml
anchor-escrow-example/tests/idls/: anchor_escrow.json
anchor-escrow-example/tests/src/: anchor_client_with_litesvm_test.rs  anchor_litesvm_test.rs  lib.rs  regular_litesvm_test.rs
crates/anchor-litesvm/: Cargo.toml
crates/anchor-litesvm/src/: account.rs  anchor_instruction_builder.rs  builder.rs  client.rs  context.rs  events.rs  instruction.rs  instruction_builder.rs  lib.rs  program.rs
crates/litesvm-utils/: Cargo.toml
crates/litesvm-utils/src/: assertions.rs  builder.rs  lib.rs  test_helpers.rs  transaction.rs
docs/: API_REFERENCE.md  MIGRATION.md  QUICK_START.md
examples/: advanced_features.rs  basic_usage.rs  workspace_demo.rs
src/: account.rs  assertions.rs  test_helpers.rs
