[package]
name = "anchor-litesvm"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Production-compatible Anchor testing with LiteSVM - same syntax as anchor-client, 78% less code"
documentation = "https://docs.rs/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]

[dependencies]
litesvm-utils = { version = "0.1.0", path = "../litesvm-utils" }
litesvm = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"